--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://irashtynda.github.io",
-  "name": "nyz",
+  "homepage": "https://irashtynda.github.io/nyz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,9 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
-    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
@@ -24,7 +21,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "node-sass": "^7.0.3"
   }
 }
