corrected homepage adress

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://irashtynda.github.io/nyz",
+  "homepage": "https://irashtynda.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
